<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="menu_text_array">
        <item>商品信息</item>
        <item>客户信息</item>
        <item>账单信息</item>
        <item>设置</item>
        <item>关于</item>
    </string-array>
    
    <string-array name="array_unit">
		<item></item>
		<item>个</item>
		<item>双</item>
		<item>斤</item>
		<item>包</item>
		<item>瓶</item>
		<item>盒</item>
		<item>箱</item>
		<item>条</item>
		<item>打</item>
		<item>套</item>
	</string-array>
	
    
    <string-array name="date_unit">
		<item></item>
		<item>天</item>
		<item>周</item>
		<item>月</item>
		<item>年</item>
	</string-array>
    <string name="date_unit_day">天</string>
    <string name="date_unit_week">周</string>
    <string name="date_unit_month">月</string>
    <string name="date_unit_year">年</string>
	
    <string name="options_sure">确认</string>
    <string name="options_cancle">取消</string>

    <string name="app_name">小卖部</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="action_edit">编辑</string>
    <string name="action_add">添加</string>
    <string name="action_delete">删除</string>
    <string name="action_cancel">取消</string>
    <string name="action_detail">商品信息</string>
    <string name="action_home">主页</string>
    <string name="action_finish">完成</string>
    <string name="action_refresh">刷新</string>
    <string name="action_billrecord_add">账单添加</string>
    <string name="action_billrecord_detail">账单修改</string>
    <string name="action_billrecord_clear">账单结清</string>
    <string name="action_billrecord_cancel">撤销结清</string>
    
    <string name="reloading">数据加载中&#8230;</string>
    <string name="loadmore">加载更多</string>
    <string name="note_list_empty">列表为空</string>
    <string name="copy_to_clipboard">已拷贝至剪切板</string>
    
    <string name="exit_more_touch">再按一次退出程序</string>
    
    <string name="tab_item_goods">商品</string>
    <string name="tab_item_search">搜索</string>
    <string name="tab_item_overdue">到期商品</string>
    
    
    <string name="search_btn">搜索</string>
    <string name="search_text_hint">请输入文字...</string>
    
    <string name="goods_list_empty_text">暂无商品信息</string>
    <string name="search_goods_list_empty_text">未搜索到商品信息</string>
    <string name="overdue_list_empty_text">暂无到期商品信息</string>
    
    <string name="goods_list_price_title">价格：</string>
    <string name="goods_list_price_per">&#160;/&#160;</string>
    <string name="goods_list_date_title">进货日期：</string>
    <string name="goods_list_overdue_title">到期日期：</string>
    
    <string name="goods_delete_dia_title">确认删除商品信息?</string>
    
    <string name="goods_pic_title">商品图片</string>
    <string name="goods_pic_dia_title">图片获取</string>
    <string name="goods_pic_dia_pick">相册</string>
    <string name="goods_pic_dia_camera">拍照</string>
    <string name="goods_name_title">商品描述</string>
    <string name="goods_name_hint">请输入商品描述</string>
    <string name="goods_price_title">价格</string>
    <string name="goods_price_hint">请输入价格</string>
    <string name="goods_costprice_title">成本</string>
    <string name="goods_costprice_hint">请输入成本</string>
    <string name="goods_stock_title">库存</string>
    <string name="goods_stock_hint">请输入库存</string>
    <string name="goods_date_title">进货日期</string>
    <string name="goods_overdue_title">到期日期</string>
    <string name="goods_date_hint">请选择进货日期</string>
    <string name="goods_overdue_hint">请选择到期日期</string>
    <string name="goods_unit_title">单位</string>
    <string name="goods_barcode_title">条形码</string>
    <string name="goods_barcode_hint">请输入条形码</string>
    
    <string name="goods_toast_name_must">商品描述不能为空</string>
    <string name="goods_toast_price_must">商品价格不能为空</string>
    <string name="goods_toast_unit_must">商品单位不能为空</string>
    
    <string name="goods_add_success">商品添加成功</string>
    <string name="goods_update_success">商品修改成功</string>
    <string name="goods_delete_success">商品删除成功</string>
    
    <string name="title_activity_goods_add">商品添加</string>
    <string name="title_activity_goods_detail">商品修改</string>
    
    
    <!-- About Page -->
    <string name="about_title">关于</string>
    <string name="about_item_share_title">推荐给朋友</string>
    <string name="about_item_feedback_title">意见反馈</string>
    <string name="about_item_version_title">版本更新</string>
    <string name="about_item_aboutme_title">关于作者</string>
    <string name="about_share_subject">关于作者</string>
    
    <string name="about_feedback_title">标题：</string>
    <string name="about_feedback_content">内容：</string>
    <string name="about_feedback_submit">提交</string>
    <string name="about_feedback_submit_success">意见反馈提交成功</string>
    
    <string name="about_me_name">李峰</string>
    <string name="about_me_phone">15814649063</string>
    <string name="about_me_mail">infelix@163.com</string>
    <string name="about_me_msg">pazzainfer</string>
    <string name="about_me_location">江西南丰</string>
    <string name="about_me_summary">小卖部完全免费，是一款解决商品信息销售记账的效率应用！</string>
    <string name="about_me_mail_selecct">发送邮件</string>

</resources>