<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/action_edit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add"/>
	<item
        android:id="@+id/action_cancel"
        android:icon="@drawable/action_cancel"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:enabled="false"
        android:visible="false"
        android:title="@string/action_cancel"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/action_delete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:enabled="false"
        android:visible="false"
        android:title="@string/action_delete"/>
</menu>