<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >

   	<TextView
   	    android:id="@+id/goods_add_pic_title"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:textSize="18sp"
   	    android:text="@string/goods_pic_title"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginTop="10.0dip"
	    android:layout_marginRight="10.0dip"/>
   	<LinearLayout
   	    android:id="@+id/goods_add_pic_layout"
   	    android:layout_below="@id/goods_add_pic_title"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginTop="10.0dip"
	    android:layout_marginRight="10.0dip"
   	    android:text="@string/goods_pic_title">
   	    <ImageView 
   	        android:id="@+id/goods_add_pic_btn"
   	        android:contentDescription="@string/goods_pic_title"
   	        android:background="@drawable/picture_add_selector"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"/>
   	</LinearLayout>
   	
   	
   	<TextView
   	    android:id="@+id/goods_add_name_title"
   	    android:layout_below="@id/goods_add_pic_layout"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginTop="10.0dip"
	    android:layout_marginRight="10.0dip"
	    android:drawableLeft="@drawable/mustinput"
   	    android:textSize="18sp"
   	    android:text="@string/goods_name_title"/>
   	<EditText
   	    android:id="@+id/goods_add_name_input"
   	    android:hint="@string/goods_name_hint"
   	    android:inputType="textMultiLine"
   	    android:layout_below="@id/goods_add_name_title"
   	    android:layout_width="match_parent"
   	    android:layout_height="100.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginTop="10.0dip"
	    android:layout_marginRight="10.0dip"
    	android:gravity="start"
    	android:background="@drawable/view_border_corner"
	    android:imeOptions="actionNext"
	    android:nextFocusForward="@+id/goods_add_price_input"
   	    >
   	</EditText>
   	
   	<LinearLayout
   	    android:id="@+id/goods_add_barcode_layout"
   	    android:layout_below="@id/goods_add_name_input"
   	    android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
		android:layout_marginLeft="10.0dip"
		android:layout_marginRight="10.0dip"
		android:layout_marginTop="10.0dip"
   	    android:orientation="vertical"
    	android:background="@drawable/view_border">
		<TextView 
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:textSize="18sp"
			android:layout_marginLeft="10.0dip"
			android:layout_marginTop="10.0dip"
		   	android:text="@string/goods_barcode_title"/>
		<TableLayout
	   	        android:layout_width="fill_parent"
	   	        android:layout_height="wrap_content"
	   	        android:stretchColumns="0"
	   	        ><TableRow
	   	    	android:gravity="center_vertical">
			<EditText
				android:id="@+id/goods_add_barcode_input"
				android:hint="@string/goods_barcode_hint"
	   	   		android:inputType="text"
	   	   		android:singleLine="true"
				android:layout_marginLeft="10.0dip"
				android:layout_marginTop="10.0dip"
				android:layout_marginBottom="10.0dip"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
    			android:background="@drawable/text_noborder"
	    		android:imeOptions="actionNext"
	    		android:nextFocusForward="@+id/goods_add_price_input"
				/>
			<ImageView android:id="@+id/goods_add_barcode_camera"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/camera30"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
			    android:layout_marginRight="10.0dip"
			    android:layout_marginEnd="10.0dip"
			    />
		</TableRow></TableLayout>
	</LinearLayout>
        
   	<GridLayout 
   	    android:id="@+id/goods_add_num_layout"
   	    android:layout_below="@id/goods_add_barcode_layout"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginTop="10.0dip"
	    android:layout_marginRight="10.0dip"
   	    android:orientation="horizontal"  
	    android:rowCount="2"  
	    android:columnCount="1">
   	    <LinearLayout 
	   	    android:layout_width="match_parent"
	   	    android:layout_height="50dip"
   	    	android:orientation="horizontal"
   	    	android:gravity="center_vertical"
    		android:background="@drawable/view_border">
   	        <TextView 
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
	    		android:layout_marginLeft="10.0dip"
	    		android:drawableLeft="@drawable/mustinput"
		   	    android:textSize="18sp"
		   	    android:text="@string/goods_price_title"/>
   	        <EditText
		   	    android:id="@+id/goods_add_price_input"
		   	    android:hint="@string/goods_price_hint"
		   	    android:inputType="numberDecimal"
			    android:layout_marginLeft="10.0dip"
			    android:layout_marginRight="10.0dip"
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
    			android:background="@drawable/text_noborder"
	    		android:imeOptions="actionNext"
	    		android:nextFocusForward="@+id/goods_add_costprice_input"
		   	    />
   	    </LinearLayout>
   	    <LinearLayout 
	   	    android:layout_width="match_parent"
	   	    android:layout_height="50dip"
   	    	android:orientation="horizontal"
   	    	android:gravity="center_vertical"
    		android:background="@drawable/view_border">
   	        <TextView 
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
	    		android:layout_marginLeft="24.0dip"
		   	    android:textSize="18sp"
		   	    android:text="@string/goods_costprice_title"/>
   	        <EditText
		   	    android:id="@+id/goods_add_costprice_input"
		   	    android:hint="@string/goods_costprice_hint"
		   	    android:inputType="numberDecimal"
			    android:layout_marginLeft="10.0dip"
			    android:layout_marginRight="10.0dip"
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
    			android:background="@drawable/text_noborder"
	    		android:imeOptions="actionNext"
	    		android:nextFocusForward="@+id/goods_add_unit_input"
		   	    />
   	    </LinearLayout>
   	    <LinearLayout 
	   	    android:layout_width="match_parent"
	   	    android:layout_height="50dip"
   	    	android:orientation="horizontal"
   	    	android:gravity="center_vertical"
    		android:background="@drawable/view_border">
   	        <TextView 
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
	    		android:layout_marginLeft="10.0dip"
	    		android:drawableLeft="@drawable/mustinput"
		   	    android:textSize="18sp"
		   	    android:text="@string/goods_unit_title"/>
   	        <Spinner 
   	            android:id="@+id/goods_add_unit_input"
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
	    		android:layout_marginLeft="10.0dip"
	    		android:entries="@array/array_unit"/>
   	    </LinearLayout>
   	    
   	    <LinearLayout 
	   	    android:layout_width="match_parent"
	   	    android:layout_height="50dip"
   	    	android:orientation="horizontal"
   	    	android:gravity="center_vertical"
    		android:background="@drawable/view_border">
   	        <TextView 
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="18sp"
			    android:layout_marginLeft="24.0dip"
		   	    android:text="@string/goods_stock_title"/>
   	        <EditText
		   	    android:id="@+id/goods_add_stock_input"
		   	    android:hint="@string/goods_stock_hint"
		   	    android:inputType="number"
			    android:layout_marginLeft="10.0dip"
			    android:layout_marginRight="10.0dip"
		   	    android:layout_height="wrap_content"
		   	    android:layout_width="match_parent"
    			android:background="@drawable/text_noborder"
		   	    />
   	    </LinearLayout>
   	</GridLayout>
   	<LinearLayout
   	    android:id="@+id/goods_add_purchase_layout"
   	    android:layout_width="match_parent"
   	    android:layout_height="50dip"
   	    android:orientation="horizontal"
   	    android:gravity="center_vertical"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginTop="10.0dip"
	    android:layout_marginRight="10.0dip"
    	android:background="@drawable/view_border"
    	android:layout_below="@id/goods_add_num_layout"
    	>
   	    <TextView
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:textSize="18sp"
   	        android:layout_marginLeft="10.0dip"
   	        android:text="@string/goods_date_title"/>
   	    <TableLayout
	   	        android:layout_width="fill_parent"
	   	        android:layout_height="wrap_content"
	   	        android:stretchColumns="0"
	   	        ><TableRow
	   	    	android:gravity="center_vertical">
   	        <EditText
   	            android:id="@+id/goods_add_date_input"
   	            android:hint="@string/goods_date_hint"
				android:editable="false"
		   	   	android:inputType="date"
		   	   	android:singleLine="true"
				android:layout_marginLeft="10.0dip"
				android:layout_marginTop="10.0dip"
				android:layout_marginBottom="10.0dip"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
	    		android:background="@drawable/text_noborder"
				/>
			<ImageView android:id="@+id/goods_add_date_calendar"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:src="@drawable/calendar30"
				android:layout_marginRight="10.0dip"
				android:layout_marginEnd="10.0dip"
				/>
		</TableRow></TableLayout>
	</LinearLayout>
	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="50dip"
   	    android:orientation="horizontal"
   	    android:gravity="center_vertical"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
    	android:layout_marginBottom="10.0dip"
    	android:background="@drawable/view_border"
    	android:layout_below="@id/goods_add_purchase_layout"
    	>
   	    <TextView
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:textSize="18sp"
   	        android:layout_marginLeft="10.0dip"
   	        android:text="@string/goods_overdue_title"/>
   	    <TableLayout
	   	        android:layout_width="fill_parent"
	   	        android:layout_height="wrap_content"
	   	        android:stretchColumns="0"
	   	        ><TableRow
	   	    	android:gravity="center_vertical">
   	        <EditText
   	            android:id="@+id/goods_add_overdue_input"
   	            android:hint="@string/goods_overdue_hint"
				android:editable="false"
		   	   	android:inputType="date"
		   	   	android:singleLine="true"
				android:layout_marginLeft="10.0dip"
				android:layout_marginTop="10.0dip"
				android:layout_marginBottom="10.0dip"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
	    		android:background="@drawable/text_noborder"
				/>
			<ImageView android:id="@+id/goods_add_overdue_calendar"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:src="@drawable/calendar30"
				android:layout_marginRight="10.0dip"
				android:layout_marginEnd="10.0dip"
				/>
		</TableRow></TableLayout>
	</LinearLayout>
</RelativeLayout>
</ScrollView>