<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/main_content_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/main_content_tab"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:background="@drawable/fragment_tab_bg_listtab">

        <RadioButton
            android:id="@+id/fragment_tab_list"
            style="@style/fragment_tab"
            android:drawableTop="@drawable/fragment_tab_goodslist_selector"
            android:text="@string/tab_item_goods"/>

        <RadioButton
            android:id="@+id/fragment_tab_search"
            style="@style/fragment_tab"
            android:drawableTop="@drawable/fragment_tab_search_selector"
            android:text="@string/tab_item_search" />

        <RadioButton
            android:id="@+id/fragment_tab_overdue"
            style="@style/fragment_tab"
            android:drawableTop="@drawable/fragment_tab_overdue_selector"
            android:text="@string/tab_item_overdue" />
    </RadioGroup>
</LinearLayout>