<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dialog_goodssearch_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/dialog_goodssearch_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/search_btn_background"
            android:gravity="center"
            android:text="@string/search_btn"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/dialog_goodssearch_delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/dialog_goodssearch_btn"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/dialog_goodssearch_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/search_frame"
                android:hint="@string/search_text_hint"
                android:imeOptions="actionSearch"
                android:paddingLeft="32dp"
                android:singleLine="true"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/dialog_goodssearch_list"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dialog_goodssearch_top"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/list_separator_line"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/dialog_goodssearch_list_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/dialog_goodssearch_top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_goodssearch_list_empty_text"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lineSpacingMultiplier="0.92"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:text="@string/goods_list_empty_text"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>