<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffefebe7" >

    <RelativeLayout
        android:id="@+id/about_feedback_top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#106184" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10.0dip"
            android:src="@drawable/about_title" />
    </RelativeLayout>
    <!-- 用来垂直滚动视图，用于设置项较多的情形。如果设置项不多，那么就不需要了。 -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_feedback_top_relative"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="60.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="@string/about_item_feedback_title"
                android:textColor="#ff888888"
                android:textSize="16.0sp"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:stretchColumns="1"
                    >

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/item_corner_top_bg_selector"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="left"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                			android:text="@string/about_feedback_title"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <EditText
                            android:id="@+id/about_feedback_title"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="35.0dip"
                            android:background="@drawable/view_border_corner"
                            android:padding="10.0dip"
                       		android:layout_marginRight="10.0dip"
                       		android:layout_marginEnd="10.0dip"
    						android:gravity="start"
                            android:singleLine="true"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@+id/about_feedback_content"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/item_corner_middle_bg_selector"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="left"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                			android:text="@string/about_feedback_content"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <EditText
                            android:id="@+id/about_feedback_content"
                            android:layout_width="wrap_content"
                            android:layout_height="200.0dip"
                            android:background="@drawable/view_border_corner"
                            android:gravity="start"
                            android:padding="10.0dip"
                       		android:layout_marginRight="10.0dip"
                       		android:layout_marginEnd="10.0dip"
                            android:singleLine="false" />
                    </TableRow>
                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/item_corner_bottom_bg_selector"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip"
                        android:gravity="center_horizontal|center_vertical">
                        <Button
                            android:id="@+id/about_feedback_submit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_bg_selector"
                            android:text="@string/about_feedback_submit"
                            android:textColor="#ffffff"
                            android:singleLine="false" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>